Add basic readme

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_URL=localhost:3000
-APP_NAME=Wedding RSVP
+APP_NAME=Wedding RSVP App
 APP_DOMAIN=http://localhost:3000
 ADMIN_NAME=admin
 ADMIN_PASSWORD=admin123
