--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_URL=localhost:3000
+APP_URL=http://localhost:3000
 APP_NAME=RSVP App
-APP_DOMAIN=http://localhost:3000
+APP_DOMAIN=localhost:3000
 ADMIN_NAME=admin
 ADMIN_PASSWORD=admin123
 ADMIN_EMAIL=
